Feat: some changes and create others classes