@@ -1,35 +1,30 @@
 import enums.SexPet;
 import enums.TypePet;
 
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.text.SimpleDateFormat;
 import java.util.Arrays;
-import java.util.Date;
 import java.util.List;
 import java.util.Scanner;
 
 public class PetService {
     private final Scanner sc;
-    private String nomeCompleto;
+    private PetRepository petRepository;
 
-    public PetService(Scanner sc) {
+    public PetService(Scanner sc, PetRepository petRepository) {
         this.sc = sc;
+        this.petRepository = petRepository;
     }
 
     public void cadastrarPet(List<String> perguntas) {
         Pet pet = new Pet();
 
         try {
-            System.out.println(perguntas.get(0));
+            System.out.println(perguntas.getFirst());
             String nomeCompleto = sc.nextLine().trim();
 
             if (nomeCompleto.isBlank()) {
                 throw new CampoExceptions("Nome e sobrenome são obrigatórios!");
             }
             PetValidator.validarNome(nomeCompleto);
-            this.nomeCompleto = nomeCompleto;
 
             String[] partes = nomeCompleto.trim().split("\\s+");
             if (partes.length < 2) {
@@ -77,8 +72,9 @@ public class PetService {
             pet.setRaca(raca);
 
             System.out.println("\nPet cadastrado com sucesso!");
-            System.out.println(pet);
-            criarObjetoPet(pet);
+            petRepository.getPets().add(pet);
+            petRepository.criarObjetoPet(pet);
+            petRepository.salvarPetArquivo(pet);
 
         } catch (CampoExceptions e) {
             System.out.println("Erro: " + e.getMessage());
@@ -123,30 +119,5 @@ public class PetService {
         }
 
         return sexo;
-    }
-
-    private void criarObjetoPet(Pet pet) {
-        String pattern = "yyyyMMdd'T'HHmm";
-        SimpleDateFormat sdf = new SimpleDateFormat(pattern);
-        String data = sdf.format(new Date());
-
-        String nomeCompletoParaData = nomeCompleto.trim().toUpperCase().replaceAll("\\s+", "");
-
-        String nameFile = data+"-"+nomeCompletoParaData;
-// CORRIGIR AQUI
-        File file = new File("src\\petsCadastrados"+ nameFile +".txt");
-
-        try (FileWriter fw = new FileWriter(file, true)) {
-            fw.write(nomeCompleto);
-            fw.write(pet.getTipo().toString());
-            fw.write(pet.getSexo().toString());
-            fw.write(pet.getEndereco().toString());
-            fw.write(String.valueOf(pet.getIdade()));
-            fw.write(String.valueOf(pet.getPeso()));
-            fw.write(pet.getRaca().toString());
-            fw.flush();
-        } catch (IOException ex) {
-            ex.printStackTrace();
-        }
     }
 }
